Task-4-Solution/kub_manifest/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.image-pull-secret: regcred
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.image-pull-secret: regcred
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/docker-carrental-net: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: SPRING_DATASOURCE_PASSWORD
              value: password
            - name: SPRING_DATASOURCE_URL
              value: jdbc:postgresql://db:5432/carrental
            - name: SPRING_DATASOURCE_USERNAME
              value: techprodb_user
          image: IMAGE_TAG_API
          name: brc-backend
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
