Task-4-Solution/kub_manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.image-pull-secret: regcred
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.image-pull-secret: regcred
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/docker-carrental-net: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: carrental
            - name: POSTGRES_PASSWORD
              value: password
            - name: POSTGRES_USER
              value: techprodb_user
          image: IMAGE_TAG_PSTGRE
          name: postgres
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
