Task-4-Solution/kub_manifest/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.image-pull-secret: regcred
    kompose.service.expose: carrental.yagmurana.info
    kompose.service.nodeport.port: "30001"
    kompose.service.type: nodeport
    kompose.version: 1.33.0 (3ce457399)
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ui
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.image-pull-secret: regcred
        kompose.service.expose: carrental.yagmurana.info
        kompose.service.nodeport.port: "30001"
        kompose.service.type: nodeport
        kompose.version: 1.33.0 (3ce457399)
      labels:
        io.kompose.network/docker-carrental-net: "true"
        io.kompose.service: ui
    spec:
      containers:
        - env:
            - name: REACT_APP_API_URL
              value: http://carrental.yagmurana.info:8080/car-rental/api/
          image: IMAGE_TAG_UI
          name: brc-frontend
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
      imagePullSecrets:
        - name: regcred
      restartPolicy: Always
